# geogram_example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: clang.cmake
data/: success_case.pts
src/: CMakeLists.txt
src/point_check/: CMakeLists.txt  main.cpp
